--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,16 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
         <activity android:name=".main"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="hu.harmakhis.shisha.SessionSummary"></activity>
+        <activity android:name="hu.harmakhis.shisha.SessionSummary"
+        android:screenOrientation="portrait">
+        </activity>
 
     </application>
 </manifest>
