--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="4" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
-        <activity android:name=".main"
+        <activity android:name=".Start"
                   android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +16,7 @@
         <activity android:name="hu.harmakhis.shisha.SessionSummary" android:screenOrientation="portrait"></activity>
         <activity android:name="org.achartengine.GraphicalActivity"></activity>
         <activity android:name=".Statistics"></activity>
+        <activity android:name=".Main"></activity>
 
     </application>
 </manifest>
