--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="hu.harmakhis.shisha"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="10" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
         <activity android:name=".Start"
@@ -16,6 +16,8 @@
         <activity android:name="hu.harmakhis.shisha.SessionSummary" android:screenOrientation="portrait"></activity>
         <activity android:name="org.achartengine.GraphicalActivity"></activity>
         <activity android:name=".Statistics"></activity>
+        <activity android:name=".Start"></activity>
+        <activity android:name=".StartSession"></activity>
         <activity android:name=".Main"></activity>
 
     </application>
