Portrait orientation is forced in every activity.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,10 +14,10 @@
             </intent-filter>
         </activity>
         <activity android:name="hu.harmakhis.shisha.SessionSummary" android:screenOrientation="portrait"></activity>
-        <activity android:name="org.achartengine.GraphicalActivity"></activity>
-        <activity android:name=".Statistics"></activity>
-        <activity android:name=".StartSession"></activity>
-        <activity android:name=".Main"></activity>
+        <activity android:name="org.achartengine.GraphicalActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Statistics" android:screenOrientation="portrait"></activity>
+        <activity android:name=".StartSession" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Main" android:screenOrientation="portrait"></activity>
 
     </application>
 </manifest>
