--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,8 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
-
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
         <activity android:name=".Start"
                   android:label="@string/app_name" android:screenOrientation="portrait">
@@ -18,6 +19,7 @@
         <activity android:name=".Statistics" android:screenOrientation="portrait"></activity>
         <activity android:name=".StartSession" android:screenOrientation="portrait"></activity>
         <activity android:name=".Main" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Donate" android:screenOrientation="portrait" ></activity>
 
     </application>
 </manifest>
