--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="lib/achartengine-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Flurry_3.2.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
