--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".Main" android:screenOrientation="portrait"></activity>
         <activity android:name=".Donate" android:screenOrientation="portrait" ></activity>
         <activity android:name="com.vilagmegvaltas.shisha.UsageSummary"></activity>
+        <activity android:name=".Share"></activity>
 
     </application>
 </manifest>
