Missing project files added/updated.

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="lib/achartengine-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/Flurry_3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/socialauth-4.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/socialauth-android-3.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
