--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.vilagmegvaltas.shisha"
-      android:versionCode="3"
-      android:versionName="1.2">
+    package="com.vilagmegvaltas.shisha"
+    android:versionCode="3"
+    android:versionName="1.2" >
+
     <uses-sdk android:minSdkVersion="10" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
-        <activity android:name=".Start"
-                  android:label="@string/app_name" android:screenOrientation="portrait">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:screenOrientation="portrait"
+        android:theme="@android:style/Theme.NoTitleBar" >
+        <activity
+            android:name=".Start"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.vilagmegvaltas.shisha.SessionSummary" android:screenOrientation="portrait"></activity>
-        <activity android:name=".Statistics" android:screenOrientation="portrait"></activity>
-        <activity android:name=".StartSession" android:screenOrientation="portrait"></activity>
-        <activity android:name=".Main" android:screenOrientation="portrait"></activity>
-        <activity android:name=".Donate" android:screenOrientation="portrait" ></activity>
-        <activity android:name="com.vilagmegvaltas.shisha.UsageSummary"></activity>
-        <activity android:name=".Share"></activity>
-
+        <activity
+            android:name="com.vilagmegvaltas.shisha.SessionSummary"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Statistics"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".StartSession"
+            android:screenOrientation="portrait" 
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity
+            android:name=".Main"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Donate"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity android:name="com.vilagmegvaltas.shisha.UsageSummary" >
+        </activity>
+        <activity android:name=".Share" >
+        </activity>
     </application>
+
 </manifest>
