--- a/assets/oauth_consumer.properties
+++ b/assets/oauth_consumer.properties
@@ -11,8 +11,8 @@ twitter.com.consumer_key = 5jwyYJia583EEczmdAmlOA
 twitter.com.consumer_secret = j0rQkJjTjwVdv7HFiE4zz2qKJKzqjksR2aviVU8fSc
 
 #facebook
-graph.facebook.com.consumer_key = <fbconsumerkey>
-graph.facebook.com.consumer_secret = <fbsecret>
+graph.facebook.com.consumer_key = 656159361071080
+graph.facebook.com.consumer_secret = cd189fbf8bcdc963a924e76ae5baaf96
 graph.facebook.com.custom_permission = publish_stream
 
 #LinkedIn
