--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:screenOrientation="portrait"
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
-            android:name=".Start"
+            android:name=".SplashScreenActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
@@ -36,17 +36,17 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".StartSession"
+            android:name=".StartSessionActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".Main"
+            android:name=".RunningSessionActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity android:name="com.vilagmegvaltas.shisha.UsageSummary" >
         </activity>
-        <activity android:name=".Share" >
+        <activity android:name=".ShareActivity" >
         </activity>
     </application>
 
