--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,9 +48,7 @@
         </activity>
         <activity android:name="com.vilagmegvaltas.shisha.ShareActivity" >
         </activity>
-        <activity
-            android:name="com.vilagmegvaltas.shisha.SummaryActivity"
-             >
+        <activity android:name="com.vilagmegvaltas.shisha.SummaryActivity" >
         </activity>
     </application>
 
