--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 bin/*
 gen/hu/harmakhis/shisha/R.java
 src/com/vilagmegvaltas/shisha/utils/FlurryAPIKeyContainer.java
+.gradle
+library
+shishaManager/build
+
